fixed header__image falling out of container in blocks/header.css.

--- a/blocks/header.css
+++ b/blocks/header.css
@@ -8,6 +8,7 @@
   max-height: 800px;
   display: flex;
   flex-direction: column;
+  position: relative;
 }
 
 .header__title {
